# dify-plus

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  complex_enhanced_test_data.json  enhanced_test_data.json  main.py  pyproject.toml  test_complex.json
.claude/: agent-skills-rules.md  claude-mem-install.md  hooks-rules.md  plugins_addresses.md  settings.local.json  settings.local_api.json  settings.local_aws.json  settings.local_glm.json  settings.local_kimi.json  settings.local_minicoding.json  settings.local_minimax.json  settings.local_packy.json  slash-commands-rules.md  subagent-rules.md
.claude/commands/: catchup.md  commit.md  file-analyzer.md  git-worktree-create.md  git-worktree-delete.md  git-worktree-merge.md  git-worktree-overview.md
.cursor/: mcp.json
.cursor/rules/: code-python-rule.mdc  doc-detailed-design-spec.mdc  doc-onprem-deploy-plan.mdc  doc-system-test-plan.mdc  doc-system-test-report.mdc  doc-test-cases.mdc  doc-testing-process.mdc
.windsurf/rules/: doc-detailed-design-spec.md  doc-onprem-deploy-plan.md  doc-system-test-plan.md  doc-system-test-report.md  doc-testing-process.md
docker/: POSTGRES_PASSWORD_RESET_GUIDE.md  debug-workflow.sh  docker-compose.dify-plus.yaml  fix-workflow.sh  redeploy.sh  validate-config.sh
docs/Dify_documents/: dify_structure.md
docs/SSO实现方案/: Dify-SSO完整实现方案.md  README.md  安全最佳实践.md  快速参考指南.md  方案对比-直接生成JWT.md  测试用例.md  部署指南.md
docs/使用说明/: 知识库管理_使用说明.md
docs/概要设计说明书/: README.md  概要设计说明书.md
docs/测试用例/: 知识库管理_元数据管理_测试用例.md  知识库管理_外部知识库与集成_测试用例.md  知识库管理_检索与调试_测试用例.md  知识库管理_知识库构建与维护_测试用例.md  知识库管理_维修手册定位与问答_测试用例.md
docs/研发工作量评估/: 研发工作量评估.md
docs/系统测试报告/: 系统测试报告_2025-09-08.md
docs/系统测试方案/: 系统测试方案.md
docs/详细设计说明书/: README.md  (+1 more)
or-tools/: .env.example  README.md  main.py  my_solution.json  my_solution_debug.json  my_solution_debug2.json  my_solution_debug3.json  my_solution_final.json  my_solution_new.json  pyproject.toml  requirements.txt  solve_test_data.py  test_api.py  test_data.json
or-tools/docs/: api_contract.md  development_plan.md  requirements.md  test_scenarios.md
or-tools/examples/: basic_usage.py
or-tools/src/: __init__.py
or-tools/src/api/: __init__.py  config_api.py  main.py  middleware.py  prep_api.py
or-tools/src/config/: __init__.py  settings.py
or-tools/src/core/: __init__.py  constants.py  exceptions.py
or-tools/src/models/: __init__.py  event.py  job.py  preparation.py  resource.py  schedule.py
or-tools/src/schemas/: __init__.py
or-tools/src/services/: __init__.py  event_service.py  gate_service.py  resource_service.py  scheduling_service.py
or-tools/src/solvers/: __init__.py  constraint_builder.py  cpsat_solver.py  objective_builder.py  solution_parser.py  solver_interface.py
or-tools/src/utils/: __init__.py  logger.py  time_utils.py  validators.py
or-tools/test_output/: enhanced_solution.json  optimization_summary_report.md  optimized_solution_20250817_130150.json  optimized_solution_20250817_131500.json  optimized_solution_20250817_223406.json  optimized_solution_20250817_231306.json
or-tools/tests/: SOLUTION_SUMMARY.md  TEST_DATA_ANALYSIS.md  __init__.py  conftest.py  dependency_constraint_validator.py  enhanced_test_data.json  enhanced_test_data_generator.py  optimized_solution_generator.py  solution_validator.py  solve_test_data_legacy.py  test_basic_framework.py
test_output/: datasets-signin.md  dify-datasets-functions-analysis.md
tools/: README_md_to_excel.md  example_usage.py  md_to_excel_converter.py  run_converter.sh  test_converter.py  项目总结.md
(+47 files in other folders)
